After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662197 - pdf-loader: quote the file path before passing it to unoconv
pdf-loader: quote the file path before passing it to unoconv
Status: RESOLVED FIXED
Product: sushi
Classification: Core
Component: viewers
unspecified
Other All
: Normal normal
: ---
Assigned To: Sushi maintainer(s)
Sushi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-10-19 14:17 UTC by Vincent Untz
Modified: 2011-10-19 14:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pdf-loader: quote the file path before passing it to unoconv (1.73 KB, patch)
2011-10-19 14:17 UTC, Vincent Untz
committed Details | Review

Description Vincent Untz 2011-10-19 14:17:47 UTC
Cosimo: if this sounds familiar, that's because you fixed the issue in gnome-documents already :-)
Comment 1 Vincent Untz 2011-10-19 14:17:49 UTC
Created attachment 199437 [details] [review]
pdf-loader: quote the file path before passing it to unoconv

This fixes unoconv crashing on files with spaces in their names.
Comment 2 Cosimo Cecchi 2011-10-19 14:32:33 UTC
(In reply to comment #0)
> Cosimo: if this sounds familiar, that's because you fixed the issue in
> gnome-documents already :-)

Hehe, it did indeed ;)
Thanks, please push to git master and gnome-3-2.
Comment 3 Vincent Untz 2011-10-19 14:37:12 UTC
Pushed.